--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,8 @@ env:
 phases:
   install:
     commands:
-      - cd '${CODEBUILD_SRC_DIR}'
+      - echo $CODEBUILD_SRC_DIR
+      - cd $CODEBUILD_SRC_DIR
       - gitlab-terraform init
 
 cache:
